--- a/nico_disco.css
+++ b/nico_disco.css
@@ -13,7 +13,7 @@
            	/* Main background and settings background */
            	.app,
            	.callout-backdrop {
-                           	background:url(http://i.imgur.com/rRHGz30.jpg) !important;
+                           	background:url(https://i.imgur.com/rRHGz30.jpg) !important;
                            	background-size:cover !important;
            	}
            	
